# amllabs

./: .gitignore  README.md  pyproject.toml
amllabs/week1/: Python Tutorial.ipynb  exercise.py
amllabs/week11/: Graph_Neural_Network.ipynb
amllabs/week2/: PyTorch_Tutorial.ipynb  our_model.tar
amllabs/week2/runs/our_experiment/: events.out.tfevents.1739707688.Franks-MacBook-Pro.local.4281.0
amllabs/week3/: Neural_Network_Tutorial.ipynb
amllabs/week3/runs/mnist_experiment_1/: events.out.tfevents.1740421435.Franks-MacBook-Pro.local.86554.0  events.out.tfevents.1740421482.Franks-MacBook-Pro.local.86554.1  events.out.tfevents.1740421990.Franks-MacBook-Pro.local.6285.0
amllabs/week4/: Convolutional_Neural_Networks_and_Transfer_Learning.ipynb
amllabs/week5/: Human_Action_Recognition_Tutorial.ipynb
amllabs/week6/: Few_shot_Learning.ipynb
amllabs/week7/: Intro_attention_Transformers.ipynb
amllabs/week8/: Vision_Transformer.ipynb
week1/: Python Tutorial.ipynb
