[tool.poetry]
name = "amllabs"
version = "0.1.0"
description = "labs for University of Surrey's Applied Machine Learning module"
authors = ["frankcholula <lu.phrank@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
opencv-python = "^4.11.0.86"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
